--- a/.github/workflows/apex-test-slack-only.yml
+++ b/.github/workflows/apex-test-slack-only.yml
@@ -238,125 +238,177 @@ jobs:
               body: comment
             });
 
+      - name: Prepare Slack Payload
+        if: always()
+        run: |
+          # Escape low coverage classes for JSON
+          LOW_COV_CLASSES="${{ steps.format_slack.outputs.low_coverage_classes }}"
+          # Escape newlines and quotes for JSON
+          LOW_COV_ESCAPED=$(echo "$LOW_COV_CLASSES" | jq -Rs .)
+          
+          # Create the Slack payload
+          cat > slack_payload.json << 'SLACKEOF'
+          {
+            "blocks": [
+              {
+                "type": "header",
+                "text": {
+                  "type": "plain_text",
+                  "text": "STATUS_EMOJI Salesforce Test Results"
+                }
+              },
+              {
+                "type": "section",
+                "fields": [
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Status:*\n`TEST_STATUS`"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Test Level:*\n`TEST_LEVEL`"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Total Tests:*\nTOTAL_TESTS"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Passed:*\n✅ PASSED_TESTS"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Failed:*\n❌ FAILED_TESTS"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Skipped:*\n⏭️ SKIPPED_TESTS"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Code Coverage:*\nCODE_COVERAGE%"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Org Coverage:*\nORG_COVERAGE%"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Execution Time:*\nEXEC_TIMEs"
+                  }
+                ]
+              },
+              {
+                "type": "section",
+                "fields": [
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Coverage Threshold:*\nCOVERAGE_THRESHOLD%"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Total Classes:*\nTOTAL_CLASSES"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Classes Below COVERAGE_THRESHOLD%:*\nLOW_COVERAGE_COUNT"
+                  }
+                ]
+              },
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*Repository:* REPO_NAME\n*Branch:* `BRANCH_NAME`\n*Triggered by:* ACTOR_NAME"
+                }
+              },
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*Failed Test Classes:*\nFAILED_CLASSES"
+                }
+              },
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*Classes Below 95% Coverage:*\n```LOW_COVERAGE_CLASSES_PLACEHOLDER```"
+                }
+              },
+              {
+                "type": "actions",
+                "elements": [
+                  {
+                    "type": "button",
+                    "text": {
+                      "type": "plain_text",
+                      "text": "View Workflow Run"
+                    },
+                    "url": "WORKFLOW_URL"
+                  },
+                  {
+                    "type": "button",
+                    "text": {
+                      "type": "plain_text",
+                      "text": "📥 Download Test Results"
+                    },
+                    "url": "ARTIFACTS_URL"
+                  }
+                ]
+              }
+            ]
+          }
+          SLACKEOF
+          
+          # Replace placeholders
+          STATUS_EMOJI="${{ steps.run_tests.outputs.status == 'Passed' && '✅' || '❌' }}"
+          FAILED_CLASSES="${{ steps.run_tests.outputs.failed != '0' && format('`{0}`', steps.format_slack.outputs.failing_classes) || 'None' }}"
+          
+          sed -i.bak "s/STATUS_EMOJI/$STATUS_EMOJI/g" slack_payload.json
+          sed -i.bak "s/TEST_STATUS/${{ steps.run_tests.outputs.status }}/g" slack_payload.json
+          sed -i.bak "s/TEST_LEVEL/${{ steps.run_tests.outputs.test_level }}/g" slack_payload.json
+          sed -i.bak "s/TOTAL_TESTS/${{ steps.run_tests.outputs.total_tests }}/g" slack_payload.json
+          sed -i.bak "s/PASSED_TESTS/${{ steps.run_tests.outputs.passed }}/g" slack_payload.json
+          sed -i.bak "s/FAILED_TESTS/${{ steps.run_tests.outputs.failed }}/g" slack_payload.json
+          sed -i.bak "s/SKIPPED_TESTS/${{ steps.run_tests.outputs.skipped }}/g" slack_payload.json
+          sed -i.bak "s/CODE_COVERAGE/${{ steps.run_tests.outputs.code_coverage }}/g" slack_payload.json
+          sed -i.bak "s/ORG_COVERAGE/${{ steps.run_tests.outputs.org_coverage }}/g" slack_payload.json
+          sed -i.bak "s/EXEC_TIME/${{ steps.run_tests.outputs.exec_time }}/g" slack_payload.json
+          sed -i.bak "s/COVERAGE_THRESHOLD/${{ steps.coverage_analysis.outputs.coverage_threshold }}/g" slack_payload.json
+          sed -i.bak "s/TOTAL_CLASSES/${{ steps.coverage_analysis.outputs.total_classes }}/g" slack_payload.json
+          sed -i.bak "s/LOW_COVERAGE_COUNT/${{ steps.coverage_analysis.outputs.low_coverage_count }}/g" slack_payload.json
+          sed -i.bak "s|REPO_NAME|${{ github.repository }}|g" slack_payload.json
+          sed -i.bak "s|BRANCH_NAME|${{ github.head_ref || github.ref_name }}|g" slack_payload.json
+          sed -i.bak "s|ACTOR_NAME|${{ github.actor }}|g" slack_payload.json
+          sed -i.bak "s|FAILED_CLASSES|${FAILED_CLASSES}|g" slack_payload.json
+          sed -i.bak "s|WORKFLOW_URL|${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|g" slack_payload.json
+          sed -i.bak "s|ARTIFACTS_URL|${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts|g" slack_payload.json
+          
+          # Handle low coverage classes with proper JSON escaping
+          if [ "${{ steps.coverage_analysis.outputs.low_coverage_count }}" != "0" ]; then
+            # Read and prepare the low coverage classes text
+            LOW_COV_TEXT=$(cat low_coverage_classes.txt | head -15 | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+            # Use a temporary marker and then replace
+            sed -i.bak "s|LOW_COVERAGE_CLASSES_PLACEHOLDER|${LOW_COV_TEXT}|g" slack_payload.json
+          else
+            sed -i.bak "s|LOW_COVERAGE_CLASSES_PLACEHOLDER|None - All classes meet the threshold! ✅|g" slack_payload.json
+          fi
+          
+          cat slack_payload.json
+
       - name: Send Slack Notification
         if: always()
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            {
-              "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "${{ steps.run_tests.outputs.status == 'Passed' && '✅' || '❌' }} Salesforce Test Results"
-                  }
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Status:*\n`${{ steps.run_tests.outputs.status }}`"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Test Level:*\n`${{ steps.run_tests.outputs.test_level }}`"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Total Tests:*\n${{ steps.run_tests.outputs.total_tests }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Passed:*\n✅ ${{ steps.run_tests.outputs.passed }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Failed:*\n❌ ${{ steps.run_tests.outputs.failed }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Skipped:*\n⏭️ ${{ steps.run_tests.outputs.skipped }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Code Coverage:*\n${{ steps.run_tests.outputs.code_coverage }}%"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Org Coverage:*\n${{ steps.run_tests.outputs.org_coverage }}%"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Execution Time:*\n${{ steps.run_tests.outputs.exec_time }}s"
-                    }
-                  ]
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Coverage Threshold:*\n${{ steps.coverage_analysis.outputs.coverage_threshold }}%"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Total Classes:*\n${{ steps.coverage_analysis.outputs.total_classes }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Classes Below ${{ steps.coverage_analysis.outputs.coverage_threshold }}%:*\n${{ steps.coverage_analysis.outputs.low_coverage_count }}"
-                    }
-                  ]
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Repository:* ${{ github.repository }}\n*Branch:* `${{ github.head_ref || github.ref_name }}`\n*Triggered by:* ${{ github.actor }}"
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Failed Test Classes:*\n${{ steps.run_tests.outputs.failed != '0' && format('`{0}`', steps.format_slack.outputs.failing_classes) || 'None' }}"
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Classes Below 95% Coverage:*\n```${{ steps.coverage_analysis.outputs.low_coverage_count != '0' && steps.format_slack.outputs.low_coverage_classes || 'None - All classes meet the threshold! ✅' }}```"
-                  }
-                },
-                {
-                  "type": "actions",
-                  "elements": [
-                    {
-                      "type": "button",
-                      "text": {
-                        "type": "plain_text",
-                        "text": "View Workflow Run"
-                      },
-                      "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-                    },
-                    {
-                      "type": "button",
-                      "text": {
-                        "type": "plain_text",
-                        "text": "📥 Download Test Results"
-                      },
-                      "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts"
-                    }
-                  ]
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+        run: |
+          if [ -n "${{ secrets.SLACK_WEBHOOK_URL }}" ]; then
+            curl -X POST \
+                 -H "Content-Type: application/json" \
+                 -d @slack_payload.json \
+                 "${{ secrets.SLACK_WEBHOOK_URL }}"
+            echo "✅ Slack notification sent successfully"
+          else
+            echo "⚠️ SLACK_WEBHOOK_URL secret not configured. Skipping Slack notification."
+          fi
 
       - name: Upload Test Results
         if: always()
